# http-server-aip

./: .clang-format  CMakeLists.txt  README.md
src/: HttpParser.cpp  HttpParser.h  HttpServer.cpp  HttpServer.h  HttpStructs.cpp  HttpStructs.h  Logger.cpp  Logger.h  Router.cpp  Router.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  main.cpp
tests/: HttpCoreTests.cpp
